--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emids_server",
+  "name": "datomatic_server",
   "version": "1.0.0",
   "description": "",
   "type": "commonjs",
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "author": "Mohit Aswani",
+  "author": "Shreyas Kasliwal",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-textract": "^3.209.0",
