--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-textract": "^3.209.0",
     "amazon-textract-response-parser": "^0.2.0",
-    "aws-sdk": "^2.1250.0",
+    "aws-sdk": "^2.1295.0",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
-    "multer": "*",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
